[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdmpmt"
description = "Python experiments on mixed-hardware parallel computing."
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy>=1.19"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/phetdam/pdmpmt"

[project.optional_dependencies]
tests = ["pytest>=6.0.1"]

[tool.setuptools.dynamic]
version = {attr = "pdmpmt.__version__"}
