[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdmpmt"
description = "Python experiments on mixed-hardware parallel computing."
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy>=1.19",
    "dask>=2022.10.2",
    "distributed>=2022.10.2"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/phetdam/pdmpmt"

[project.optional-dependencies]
tests = ["pytest>=6.0.1"]

[tool.setuptools.dynamic]
version = {attr = "pdmpmt.__version__"}

# only search for pdmpmt package
# TODO: may want to move package tree to src to use auto-discovery feature
# TODO: might want to get off of setuptools as it is hardcoded to use "build"
# as the build directory and does too much directory recursion when using pip
# install ., causing a directory structure like build/lib/build/lib/... which
# cannot be worked around without some setup.py hacking. editable installs are
# ok using the package.find spec here but "real" installs are broken.
[tool.setuptools.packages.find]
where = ["."]
include = ["pdmpmt"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-rsxXP"
